# aula_09

./: anotações.txt  etl.py  exemplo_01.py  pipeline.py  pyproject.toml  tenacity_decorator.py  timer_decorator.py
