[tool.poetry]
name = "aula-09"
version = "0.1.0"
description = ""
authors = ["Matheusinhofs <matheusfs117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
loguru = "^0.7.3"
fastparquet = "^2024.11.0"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
